# cookiecutter-fair-eva-plugin

./: README.md  cookiecutter.json  pyproject.toml
{{cookiecutter.package_name}}/: LICENSE  README.md  pyproject.toml  test-requirements.txt
{{cookiecutter.package_name}}/fair_eva/plugin/{{cookiecutter.plugin_name}}/: plugin.py
{{cookiecutter.project_plugin_name}}/: pyproject.toml
{{cookiecutter.project_plugin_name}}/fair_eva/plugin/{{cookiecutter.plugin_name}}/: config.ini  plugin.py
