[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
version = "{{ cookiecutter.first_version }}"
name = "{{ cookiecutter.package_name }}"
requires-python = ">=3.7"
license = { text = "{{ cookiecutter.license_text[cookiecutter.license]|default ('GNU General Public License v3.0 or later') }}" }
description = "{{ cookiecutter.project_description }}"
dependencies = [
  "fair_eva @ git+https://github.com/IFCA-Advanced-Computing/FAIR_eva@feature/module_structure"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["fair_eva.plugin.{{ cookiecutter.plugin_name }}"]
namespaces = true

[tool.setuptools.package-data]
"fair_eva.plugin.{{ cookiecutter.plugin_name }}" = ["*.ini"]

[tool.black]
unstable = true
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | build
)/
'''

[tool.isort]
profile = "black"
force_sort_within_sections = true

[tool.flake8]
max-line-length = 99
exclude = ".git,.venv,__pycache__,build"
