[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "{{ cookiecutter.package_name }}"
version = "{{ cookiecutter.first_version }}"
description = "{{ cookiecutter.project_description }}"
requires-python = ">=3.7"
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
{% if cookiecutter.license == '"GPL-3.0-or-later"' %}
  "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
{% elif cookiecutter.license == 'Apache-2.0' %}
  "License :: OSI Approved :: Apache Software License",
{% elif cookiecutter.license == 'MIT' %}
  "License :: OSI Approved :: MIT License",
{% elif cookiecutter.license == 'BSD-3-Clause' %}
  "License :: OSI Approved :: BSD License",
{% endif %}
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering",
]
dependencies = [
  "fair_eva @ git+https://github.com/IFCA-Advanced-Computing/FAIR_eva@feature/module_structure"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["fair_eva.plugin.{{ cookiecutter.plugin_name }}"]
namespaces = true

[tool.setuptools.package-data]
"fair_eva.plugin.{{ cookiecutter.project_plugin_name }}" = ["*.ini"]

[tool.black]
unstable = true
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | build
)/
'''

[tool.isort]
profile = "black"
force_sort_within_sections = true

[tool.flake8]
max-line-length = 99
exclude = ".git,.venv,__pycache__,build"

[tool.mypy]
exclude = [
  '^build'
]
namespace_packages = true
explicit_package_bases = true

[[tool.mypy.overrides]]
module = ["fair_eva.api.*"]
ignore_missing_imports = true
